frontend/src/routes/room/video/VideoCollection.scss
@import '../../../assets/scss/main';

.video-call-container {
  align-items: center;
  bottom: 0;
  display: flex;
  flex-direction: row-reverse;
  height: 25vw;
  justify-content: space-between;
  padding: 0.5rem;
  position: absolute;
  right: 0;
  width: calc(100vw - 1rem);
  z-index: 4;

  @include media('>mobile', '<=tablet') {
    height: 15vw;
    width: 50vw;
  }

  @include media('>tablet', '<=desktop') {
    height: 10vw;
    width: 33vw;
  }

  @include media('>desktop') {
    height: 8vw;
    width: 27vw;
  }

  .video-panel {
    background-color: black;
    border-radius: $video-border-radius;
    height: 100%;
    overflow: hidden;
    position: relative;
    width: 48%;

    .video {
      height: 100%;
      width: 100%;
    }
  }

  .controls {
    background-color: rgba(0, 0, 0, 0.4);
    bottom: 0;
    display: flex;
    flex-direction: row-reverse;
    font-size: 0.9rem;
    justify-content: space-between;
    padding: 0.3rem;
    position: absolute;
    width: calc(100% - 0.6rem);

    > div {
      display: flex;
    }

    &--icon-wrapper {
      align-items: center;
      display: flex;
      justify-content: center;
      margin-right: 0.2rem;
      width: 20px;

      .fa-microphone-slash {
        margin-left: -4px;
      }

      .fa-microphone {
        margin-left: 4px;
      }

      .fa-video {
        margin-left: 1px;
      }
    }

    i {
      cursor: pointer;
      width: 1rem;
    }
  }
}

